--- a/er/appendix-a.adoc
+++ b/er/appendix-a.adoc
@@ -91,6 +91,8 @@ include::participanting-organizations/NationalLandSurveyofFinland.adoc[]
 
 include::participanting-organizations/NaturalResourcesCanada.adoc[]
 
+include::participanting-organizations/NGAMobileApps.adoc[]
+
 include::participanting-organizations/NOAANWS.adoc[]
 
 include::participanting-organizations/OSGeo.adoc[]
